test/files/pos/t5796.scala
object Bug {
  def foo(): Unit = {
    val v = {
      lazy val s = 0
      s
    }
  }
}
