test/files/neg/bug40.scala
object M {
  val v = for (1 == 0) yield 1;
}
